--- a/src/partials/scientists.html
+++ b/src/partials/scientists.html
@@ -2,7 +2,7 @@
   <h2 class="title">Обери вченого/их</h2>
 
   <ul class="scientists__list" id="scientists-list">
-    <li class="scientists__item">
+    <!-- <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
     <li class="scientists__item">
@@ -37,53 +37,65 @@
     </li>
     <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
-    </li>
+    </li> -->
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
+    <li class="scientists__item"></li>
   </ul>
 
-  <div class="options-container" id="options-list">
-    <ul class="options-list first-options-list">
-      <li>
-        <button class="option">Які вчені народилися в 19 ст.</button>
-      </li>
-      <li>
-        <button class="option">Відсортувати вчених за алфавітом</button>
-      </li>
-      <li>
-        <button class="option">
-          Відсортувати вчених за кількістю прожитих років
-        </button>
-      </li>
-      <li>
-        <button class="option">
-          Знайти вченого, який народився найпізніше
-        </button>
-      </li>
-    </ul>
-    <ul class="options-list">
-      <li>
-        <button class="option">Знайти рік народження Albert Einshtein</button>
-      </li>
-      <li>
-        <button class="option">
-          Знайти вчених, прізвища яких починаються на на літеру “С”
-        </button>
-      </li>
-      <li>
-        <button class="option">
-          Видалити всіх вчених, ім’я яких починається на “А”
-        </button>
-      </li>
-      <li>
-        <button class="option">
-          Знайти вченого, який прожив найдовше і вченого, <br />який прожив
-          найменше
-        </button>
-      </li>
-    </ul>
-  </div>
-  <p class="last-option">
+  <div id="options-list">
+    <div class="options-container">
+      <ul class="options-list first-options-list">
+        <li>
+          <button class="option">Які вчені народилися в 19 ст.</button>
+        </li>
+        <li>
+          <button class="option">Відсортувати вчених за алфавітом</button>
+        </li>
+        <li>
+          <button class="option">
+            Відсортувати вчених за кількістю прожитих років
+          </button>
+        </li>
+        <li>
+          <button class="option">
+            Знайти вченого, який народився найпізніше
+          </button>
+        </li>
+      </ul>
+      <ul class="options-list">
+        <li>
+          <button class="option">Знайти рік народження Albert Einshtein</button>
+        </li>
+        <li>
+          <button class="option">
+            Знайти вчених, прізвища яких починаються не на літеру “С”
+          </button>
+        </li>
+        <li>
+          <button class="option">
+            Видалити всіх вчених, ім’я яких починається на “А”
+          </button>
+        </li>
+        <li>
+          <button class="option">
+            Знайти вченого, який прожив найдовше і вченого, <br />який прожив
+            найменше
+          </button>
+        </li>
+      </ul>
+    </div>
     <button class="option last-option">
       Знайти вчених, в яких співпадають перші літери імені і прізвища
     </button>
-  </p>
+  </div>
 </section>
