--- a/src/css/layout/scientists.css
+++ b/src/css/layout/scientists.css
@@ -73,9 +73,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 }
 
 .scientists__item {
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  background: #d9d9d9;
+  box-sizing: border-box;
+  transition: 1s;
+
   position: relative;
   overflow: hidden;
 }
