--- a/src/css/layout/scientists.css
+++ b/src/css/layout/scientists.css
@@ -82,16 +82,10 @@
   border-radius: 20px;
   background: #d9d9d9;
   box-sizing: border-box;
-  transition: 1s;
+  transition: 1000ms;
 
   position: relative;
   overflow: hidden;
-}
-
-.scientists__img {
-  width: 100px;
-  height: 100px;
-  border-radius: 20px;
 }
 
 .scientists__box {
@@ -116,6 +110,7 @@
   text-align: center;
   font-size: 8px;
 }
+
 .scientists__fullname {
   margin-bottom: 3px;
 }
