--- a/src/partials/dinosaur.html
+++ b/src/partials/dinosaur.html
@@ -13,5 +13,8 @@
       </div>
     </div>
   </div>
+  <button id="start-game" type="button" class="dino__start__button">
+    Почніть гру!
+  </button>
   <hr />
 </section>
