--- a/src/partials/rsp.html
+++ b/src/partials/rsp.html
@@ -26,10 +26,8 @@
       <p id="counter__user">Ви - 0</p>
     </div>
   </div>
-  <p class="rsp__text">Ви виграли раунд!</p>
+  <p class="rsp__text">Зробіть ваш вибір!</p>
 
-  <button id="comp__button" type="button" class="srp__comp__btn">
-    Варіант комп’ютера
-  </button>
+  <div id="comp__button" class="srp__comp__btn"></div>
   <hr />
 </section>
