--- a/src/css/layout/dinosaur.css
+++ b/src/css/layout/dinosaur.css
@@ -15,6 +15,23 @@
   overflow: hidden;
 }
 
+.dino__start__button {
+  display: block;
+  width: 150px;
+  height: 40px;
+  background-color: #d7d7d7;
+  color: black;
+  border-radius: 40px;
+  margin: 0 auto;
+  transition: all 350ms linear;
+  margin-top: 30px;
+}
+
+.dino__start__button:hover {
+  background-color: #7e7e7e;
+  color: white;
+}
+
 .score {
   position: absolute;
   right: 5vmin;
@@ -53,7 +70,7 @@
 
 .ground {
   --left: 0;
-  width: 300%;
+  width: 100%;
   position: absolute;
   bottom: 0;
   left: calc(var(--left) * 1%);
