--- a/src/css/layout/rsp.css
+++ b/src/css/layout/rsp.css
@@ -39,13 +39,13 @@
 }
 
 .srp__comp__btn {
-  background-color: #000;
-  padding: 10px 20px;
-
   display: block;
   margin: 0 auto;
-  color: #fff;
-  font-size: 12px;
-  border: 1px solid var(--main-color);
   border-radius: 20px;
+  background: #000;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
