added our team description

--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -7,21 +7,21 @@
         <img src="/img/our-team/cleo.jpg" alt="" class="out-team__img" />
         <p class="out-team__name">Анастасія</p>
         <p class="our-team__information">
-          Інформація про роботу, яку він/вона виконав/ла
+          Хедер, модальні вікна, перевірка року, моя команда, вчені, футер
         </p>
       </li>
       <li class="out-team__item swiper-slide">
         <img src="/img/our-team/frankie.jpg" alt="" class="out-team__img" />
         <p class="out-team__name">Олександра</p>
         <p class="our-team__information">
-          Інформація про роботу, яку він/вона виконав/ла
+          Калькулятор, калькулятор часу, футбол
         </p>
       </li>
       <li class="out-team__item swiper-slide">
         <img src="/img/our-team/clawdeen.jpg" alt="" class="out-team__img" />
         <p class="out-team__name">Сабіна</p>
         <p class="our-team__information">
-          Інформація про роботу, яку він/вона виконав/ла
+          Вгадай число, камінь-ножиці-папір, динозавр, введіть 3 числа
         </p>
       </li>
     </ul>
