--- a/src/partials/football.html
+++ b/src/partials/football.html
@@ -1,5 +1,5 @@
 <section class="football__section game">
-  <h2 class="title">Футбол hello</h2>
+  <h2 class="title">Футбол</h2>
   <div class="football__container">
     <div class="football__field" id="field">
       <img
