--- a/src/partials/thanks-modal.html
+++ b/src/partials/thanks-modal.html
@@ -24,7 +24,7 @@
       </li>
     </ul>
     <button type="button" class="modal__btn-close" data-action="close-modal">
-      <img class="modal__btn-icon" src="/img/icons/cross.svg" alt="" />
+      <img class="modal__btn-icon" src="/img/modal/cross.svg" alt="" />
     </button>
   </div>
 </div>
