--- a/src/partials/dinosaur.html
+++ b/src/partials/dinosaur.html
@@ -4,9 +4,9 @@
     <div id="game" class="dino__game">
       <div id="score" class="score">0</div>
       <div id="start-message" class="start-message">Press any key to start</div>
-      <img src="../img/dino/ground.png" class="ground" />
-      <img src="../img/dino/ground.png" class="ground" />
-      <img src="../img/dino/dino-stationary.png" id="dino" class="dino" />
+      <img src="/img/dino/ground.png" class="ground" />
+      <img src="/img/dino/ground.png" class="ground" />
+      <img src="/img/dino/dino-stationary.png" id="dino" class="dino" />
       <div id="gameover-message" class="gameover-message hide">
         <p>Game over</p>
         <span>Press any key to restart</span>
