--- a/src/css/layout/football.css
+++ b/src/css/layout/football.css
@@ -26,3 +26,8 @@
   top: 50%;
   transition: top 0.5s ease-out, left 0.5s ease-out;
 }
+
+.spin {
+  transform: rotate(360deg);
+  transition: 1s;
+}
