--- a/src/partials/rsp.html
+++ b/src/partials/rsp.html
@@ -5,17 +5,17 @@
     <ul class="rsp__image__list">
       <li class="rsp__image__item">
         <button id="stone__button" type="button" class="rsp__btn">
-          <img src="./img/rsp/stone.svg" alt="stone" />
+          <img src="/img/rsp/stone.svg" alt="stone" />
         </button>
       </li>
       <li class="rsp__image__item">
         <button id="scissors__button" type="button" class="rsp__btn">
-          <img src="./img/rsp/scissors.svg" alt="scissors" />
+          <img src="/img/rsp/scissors.svg" alt="scissors" />
         </button>
       </li>
       <li class="rsp__image__item">
         <button id="paper__button" type="button" class="rsp__btn">
-          <img src="./img/rsp/paper.svg" alt="paper" />
+          <img src="/img/rsp/paper.svg" alt="paper" />
         </button>
       </li>
     </ul>
