--- a/src/css/layout/rsp.css
+++ b/src/css/layout/rsp.css
@@ -17,6 +17,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 0.2px solid var(--secondary-color);
+
+  transition: all 300ms ease-in-out;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.03);
+  }
 }
 
 .rsp__btn {
@@ -39,13 +47,16 @@
 }
 
 .srp__comp__btn {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   margin: 0 auto;
   border-radius: 20px;
   background: #000;
   width: 60px;
   height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+  transition: all 300ms ease-in-out;
+  border: 0.2px solid var(--secondary-color);
 }
