time-calculator & another verifications

--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -6,9 +6,7 @@
         id="minutes"
         class="time__calculator__input"
         type="number"
-        placeholder="Введіть число"
-      />
-
+        placeholder="Введіть число"/>
       <button type="button" id="convert" class="date__btn">
         <svg class="time__calculator__icon">
           <use href="./img/icons/symbol-defs.svg#icon-dandruff"></use>
@@ -16,9 +14,7 @@
       </button>
     </div>
     <span class="dashed__separator"></span>
-    <p id="time-calculator-result" class="time__calculator__text result__tc">
-      Введіть число
-    </p>
+    <p id="time-calculator-result" class="time__calculator__text result__tc">Введіть число</p>
   </div>
-  <hr />
+  <hr/>
 </section>
