--- a/src/partials/football.html
+++ b/src/partials/football.html
@@ -6,9 +6,8 @@
         class="football__ball"
         src="https://raw.githubusercontent.com/OlaVasylieva7/interactive-games/0f6cb3b4539b0a2569b2cc19f4f9f472f5bb38af/src/img/icons/football-ball.svg"
         id="ball"
-        alt="football ball"
-      />
+        alt="football ball"/>
     </div>
   </div>
-  <hr />
+  <hr/>
 </section>
