--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -10,32 +10,28 @@
     <div class="modal__subcontainer">
       <p class="modal__text">Введіть своє ім’я:</p>
 
-      <input
-        type="text"
-        class="modal__input"
-        placeholder="Ваше ім’я...           "
-      />
+      <input type="text" class="modal__input" placeholder="Ваше ім’я..." />
       <button class="modal__save-btn">Зберегти</button>
     </div>
 
     <ul class="modal__list">
       <li class="modal__item">
-        <img class="modal__img" src="./img/icons/sword.svg" alt="sword" />
+        <img class="modal__img" src="/img/modal/sword.svg" alt="sword" />
       </li>
       <li class="modal__item">
-        <img class="modal__img" src="./img/icons/puzzle.svg" alt="puzzle" />
+        <img class="modal__img" src="/img/modal/puzzle.svg" alt="puzzle" />
       </li>
       <li class="modal__item">
         <img
           class="thaks-modal__img"
-          src="./img/icons/tic-tac-toe.svg"
+          src="/img/modal/tic-tac-toe.svg"
           alt="tic tac toe"
         />
       </li>
       <li class="modal__item">
         <img
           class="modal__img"
-          src="./img/icons/game-development.svg"
+          src="/img/modal/game-development.svg"
           alt="game-development"
         />
       </li>
