--- a/src/partials/thanks-modal.html
+++ b/src/partials/thanks-modal.html
@@ -18,7 +18,7 @@
       <li class="thanks-modal__item">
         <img
           class="modal__img"
-          src="./img/modal/game-development.svg"
+          src="/img/modal/game-development.svg"
           alt="game-development"
         />
       </li>
