--- a/src/partials/calculator.html
+++ b/src/partials/calculator.html
@@ -1,6 +1,4 @@
 <section class="calculator__section numerical">
-  <hr />
-
   <h2 class="title">Калькулятор</h2>
   <div class="calculator__container">
     <input
@@ -16,28 +14,32 @@
         name="operator"
         id="addition"
         value="+"
-      /><label for="addition" required><span>+</span> </label>
+      />
+      <label for="addition" required><span>+</span> </label>
       <input
         type="radio"
         class="calculator__operator"
         name="operator"
         id="subtraction"
         value="-"
-      /><label for="subtraction"><span>-</span></label>
+      />
+      <label for="subtraction"><span>-</span></label>
       <input
         type="radio"
         class="calculator__operator"
         name="operator"
         id="multiplication"
         value="*"
-      /><label for="multiplication"><span>*</span></label>
+      />
+      <label for="multiplication"><span>*</span></label>
       <input
         type="radio"
         class="calculator__operator"
         name="operator"
         id="division"
         value="/"
-      /><label for="division"><span>/</span></label>
+      />
+      <label for="division"><span>/</span></label>
     </div>
     <input
       type="number"
@@ -55,4 +57,5 @@
     </button>
     <p class="calculator__result" id="calculator-result">Результат</p>
   </div>
+  <hr />
 </section>
