--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -2,12 +2,7 @@
   <h2 class="title">Калькулятор часу</h2>
   <div class="time__calculator__container">
     <div class="time__calculator__div">
-      <input
-        id="minutes"
-        class="time__calculator__input"
-        type="number"
-        placeholder="Введіть число"
-      />
+      <input id="minutes" class="time__calculator__input" type="number" />
       <button type="button" id="convert" class="date__btn">
         <svg class="time__calculator__icon">
           <use href="/img/icons/symbol-defs.svg#icon-dandruff"></use>
