--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -1,4 +1,5 @@
 <section class="time-calculator__section numerical">
+  <hr />
   <h2 class="title">Калькулятор часу</h2>
   <div class="time__calculator__container">
     <div class="time__calculator__div">
@@ -6,7 +7,8 @@
         id="minutes"
         class="time__calculator__input"
         type="number"
-        placeholder="Введіть число"/>
+        placeholder="Введіть число"
+      />
       <button type="button" id="convert" class="date__btn">
         <svg class="time__calculator__icon">
           <use href="/img/icons/symbol-defs.svg#icon-dandruff"></use>
@@ -14,7 +16,8 @@
       </button>
     </div>
     <span class="dashed__separator"></span>
-    <p id="time-calculator-result" class="time__calculator__text result__tc">Введіть число</p>
+    <p id="time-calculator-result" class="time__calculator__text result__tc">
+      Введіть число
+    </p>
   </div>
-  <hr/>
 </section>
