--- a/src/partials/dinosaur.html
+++ b/src/partials/dinosaur.html
@@ -1,4 +1,4 @@
-<section class="dino__section">
+<section class="dino__section game">
   <hr />
   <h2 class="title">Google динозавр</h2>
   <div class="dino__container">
