--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop js-backdrop">
+<div class="backdrop js-backdrop show-modal" data-modal>
   <div class="modal">
     <p class="modal__text backdown">
       Привіт! <br />
@@ -10,8 +10,13 @@
     <div class="modal__subcontainer">
       <p class="modal__text">Введіть своє ім’я:</p>
 
-      <input type="text" class="modal__input" placeholder="Ваше ім’я..." />
-      <button class="modal__save-btn">Зберегти</button>
+      <form
+        action="
+      "
+      >
+        <input type="text" class="modal__input" placeholder="Ваше ім’я..." />
+        <button type="submit" class="modal__save-btn">Зберегти</button>
+      </form>
     </div>
 
     <ul class="modal__list">
@@ -37,7 +42,7 @@
       </li>
     </ul>
 
-    <button type="button" class="modal__btn-close" data-action="close-modal">
+    <button type="button" class="modal__btn-close" data-modal-close>
       <img class="modal__btn-icon" src="/img/modal/cross.svg" alt="" />
     </button>
   </div>
