--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,9 +27,7 @@
         class="footer__input"
         placeholder="Ваша ел. адреса..."
       />
-      <button class="footer__btn" data-action="open-thanks-modal">
-        Підписатись
-      </button>
+      <button class="footer__btn" data-open-thanks-modal>Підписатись</button>
       <p class="footer__subtitle">
         *Підписавшись, Ви зможете ортимувати інформаццію про новинки на сайті
       </p>
