--- a/src/partials/thanks-modal.html
+++ b/src/partials/thanks-modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop js-backdrop">
+<div class="backdrop" data-thanks-modal>
   <div class="thanks__modal">
     <p class="thanks__title">Дякую за підписку!</p>
     <ul class="modal__list">
@@ -23,7 +23,7 @@
         />
       </li>
     </ul>
-    <button type="button" class="modal__btn-close" data-action="close-modal">
+    <button type="button" class="modal__btn-close" data-close-thanks-modal>
       <img class="modal__btn-icon" src="/img/modal/cross.svg" alt="" />
     </button>
   </div>
