--- a/src/css/layout/thanks-modal.css
+++ b/src/css/layout/thanks-modal.css
@@ -11,7 +11,10 @@
   transform: scale(1.1);
   transition: transform 200ms ease-in-out;
 
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .thanks__title {
