--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop js-backdrop show-modal" data-modal>
+<div class="backdrop show-modal" data-modal>
   <div class="modal">
     <p class="modal__text backdown">
       Привіт! <br />
@@ -10,10 +10,7 @@
     <div class="modal__subcontainer">
       <p class="modal__text">Введіть своє ім’я:</p>
 
-      <form
-        action="
-      "
-      >
+      <form>
         <input type="text" class="modal__input" placeholder="Ваше ім’я..." />
         <button type="submit" class="modal__save-btn">Зберегти</button>
       </form>
